# gsoc-repo-recommender

./: README.md
backend/: .env
backend/database/: connect.py  schema.sql
backend/org-collector-service/: pyproject.toml
backend/org-collector-service/src/org_collector/: main.py
backend/org-collector-service/src/org_collector/routers/: orgs.py
backend/org-collector-service/src/org_collector/services/: db_ops.py  master_orgs.py  org_details.py  sync_pipeline.py  sync_status.py  yearly_orgs.py
backend/repo-analytics-service/: pyproject.toml
backend/repo-analytics-service/src/repo_analytics/: main.py
backend/repo-analytics-service/src/repo_analytics/routers/: repos.py
backend/user-profile-service/: main.py  pyproject.toml
backend/user-profile-service/routes/: users.py
backend/user-profile-service/services/: users_db_ops.py
backend/user-profile-service/src/: auth.py  main.py  schemas.py
