[project]
name = "org-collector-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "psycopg>=3.1.0",
    "psycopg-pool>=3.2.7",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]
